[package]
name = "ash-actix-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
ashcore = { path = "../../packages/ashcore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
rand = "0.8"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
